# neural_networks

./: README.md
common_llm/: Cargo.toml  README.md
common_llm/src/: activation.rs  dataset_loader.rs  lib.rs  loss.rs  metrics.rs  optimizer.rs
comparation-optimizer/: Cargo.toml  README.md
comparation-optimizer/src/: main.rs
dataset_iris/: .gitignore  Cargo.toml  README.md
dataset_iris/src/: main.rs
dataset_mnist/: .gitignore  Cargo.toml  README.md
dataset_mnist/src/: main.rs
dataset_mnist_gpu/: Cargo.toml  README.md
dataset_mnist_gpu/src/: gpu_backend.rs  main.rs  matmul.wgsl
datasets/: .gitignore  README.md  download.sh
days_15_21_llm/day15_ngram_models/: Cargo.toml  README.md
days_15_21_llm/day18_embeddings/: .gitignore  Cargo.toml  README.md
days_15_21_llm/day18_embeddings/src/: embedding_layer.rs  main.rs  similarity.rs  visualize.rs
days_15_21_llm/day21_small_transformer/: .gitignore  Cargo.toml  README.md  model_config.json  tokenizer.json
days_15_21_llm/day21_small_transformer/src/: attention.rs  checkpoint.rs  dataset.rs  decoder.rs  embedding.rs  encoder.rs  feedforward.rs  generation.rs  layer_norm.rs  main.rs  positional.rs  tokenizer.rs  training.rs  transformer.rs  utils.rs
earlyStopping/: Cargo.toml  README.md
earlyStopping/src/: main.rs
graph/: .gitignore  Cargo.toml  README.md
momentum/: Cargo.toml  README.md
neurons/: Cargo.toml  README.md
perceptron/: README.md
regularization/: Cargo.toml  README.md
relu/: Cargo.toml  README.md
sigmoid/: Cargo.toml  README.md
tanh/: Cargo.toml  README.md
xor/: README.md
(+40 files in other folders)
