[package]
name = "dataset_mnist_gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
plotters = "0.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"
wgpu = "0.20"   # versión reciente de wgpu
pollster = "0.3"
bytemuck = { version = "1.23.2", features = ["derive"] }
