[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }  # Arrays para embeddings con soporte serde
ndarray-rand = "0.14"      # Inicialización aleatoria
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"           # Visualización de similitudes
