[package]
name = "small_transformer"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.15"           # Arrays para transformer
ndarray-rand = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"         # Checkpoints
plotters = "0.3"           # Métricas de entrenamiento
